--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -45,8 +45,14 @@
 <script src="/js/library/toastr.min.js"></script>
 <script src="/js/config/toastr.config.js"></script>
 
+<!-- Script -->
+<script src="/js/script.js"></script>
+
 <!-- Cart -->
 <script src="/js/functions/cart.js"></script>
+
+<!-- CartCount -->
+<script src="/js/functions/updateCartCount.js"></script>
 
 <!-- List -->
 <script src="/js/functions/list.js"></script>
