finalize banner update with Bootstrap

--- a/public/css/banner.css
+++ b/public/css/banner.css
@@ -1,100 +1,8 @@
-.site-header {
-    /*background-color: var(--white);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
-}
-
-.carousel {
-    position: relative;
-    overflow: hidden;
-    max-width: 100%;
-}
-
-.carousel-slide {
-    display: none;
-    position: relative;
-}
-
-.carousel-slide img {
-    width: 100%;
-    height: auto;
-}
-
-.carousel-slide.active {
-    display: block;
-}
-
-.carousel-caption {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-50%);
-    max-width: 800px;
-}
-
-.carousel-title {
-    color: var(--white);
-    font-size: 4.5rem;
-    font-weight: bold;
-    margin: 0px;
-}
-
-.carousel-description {
-    color: var(--white);
-    font-size: 1.8rem;
-    margin-top: 0.625em;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);    
-}
-
-.carousel-button {
-    background-color: transparent;
-    color:var(--white);
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 24px;
-}
 .carousel-button:hover {
     background-color: var(--yellow);
     color:var(--gray);
 }
 
-@media (max-width: 1023px) {
-    .carousel-caption {
-        max-width: 400px;
-    }
-
-    .carousel-title {
-        font-size: 2rem;
-    }
-
-    .carousel-description {
-        font-size: 1rem;
-    }
-}
-
-@media (max-width: 767px) {
-    .carousel-caption {
-        max-width: 250px;
-        padding: 10px;
-    }
-
-    .carousel-title {
-        font-size: 1.5rem;
-    }
-
-    .carousel-description {
-        font-size: 0.8rem;
-    }
-
-    .carousel-controls {
-        display: none;
-    }
-}
+.text-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
