--- a/src/views/partials/banner.ejs
+++ b/src/views/partials/banner.ejs
@@ -1,30 +1,43 @@
 <section class="carousel">
-    <div class="carousel-slide active">
-        <img src="images/banner/Banner_Respiratoria.jpg" alt="Protección-Respiratoria">
-        <div class="carousel-caption">
-            <h2 class="carousel-title">¡TRABAJAMOS PARA PROTEGERTE!</h2>
-            <p class="carousel-description">EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
-            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    </div>
-    <div class="carousel-slide">
-        <img src="images/banner/Banner_Auditiva.jpg" alt="Protección-Auditiva">
-        <div class="carousel-caption">
-            <h2 class="carousel-title">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h2>
-            <p class="carousel-description">EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
-            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/banner/Banner_Respiratoria.jpg" class="d-block w-100" alt="Protección-Respiratoria">
+            <div class="carousel-caption d-none d-md-block">
+              <h1 class="fw-bold display-3 text-shadow">¡TRABAJAMOS PARA PROTEGERTE!</h1>
+              <p>EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
+              <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a> 
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/banner/Banner_Auditiva.jpg" class="d-block w-100" alt="Protección-Auditiva">
+            <div class="carousel-caption d-none d-md-block">
+                <h1 class="fw-bold display-3 text-shadow">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h1>
+                <p>EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
+                <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/banner/Banner_Ocular.jpg" class="d-block w-100" alt="Protección-Ocular">
+            <div class="carousel-caption d-none d-md-block">
+                <h1 class="fw-bold display-3 text-shadow" >CALIDAD CERTIFICADA EN CADA PRODUCTO</h1>
+                <p>EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
+                <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a>
+            </div>
+          </div>
         </div>
-    </div>
-    <div class="carousel-slide">
-        <img src="images/banner/Banner_Ocular.jpg" alt="Protección-Ocular">
-        <div class="carousel-caption">
-            <h2 class="carousel-title">CALIDAD CERTIFICADA EN CADA PRODUCTO</h2>
-            <p class="carousel-description">EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
-            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
-        </div>
-    </div>
-    <div class="carousel-controls">
-        <button class="carousel-button prev" onclick="changeSlide(-1)">&#10094;</button>
-        <button class="carousel-button next" onclick="changeSlide(1)">&#10095;</button>
-    </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon carousel-button" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon carousel-button" aria-hidden="true"></span>
+          <span class="visually-hidden ">Next</span>
+        </button>
+      </div>
 </section>
