--- a/src/views/other/home copy.ejs
+++ b/src/views/other/home copy.ejs
@@ -57,38 +57,37 @@
                         <div class="products__grid">
                             <div id="multi-item-carousel" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
-                                    <% for (let i=0; i < 30; i +=4) { %>
+                                    <% for (let i=0; i < 30; i +=5) { %>
                                         <div class="carousel-item <%= i === 0 ? 'active' : '' %> col-12">
-                                            <div class="row row-cols-4">
-                                                <% for (let j=i; j < i + 4 && j < products.length; j++) { %>
+                                            <div class="row row-cols-5">
+                                                <% for (let j=i; j < i + 5 && j < products.length; j++) { %>
                                                     <div class="col">
-                                                        <article class="card product-card h-100 ">
-                                                            <div class="position-relative">
-                                                                <img class="card-img-top"
+                                                        <article class="card product-card">
+                                                            <div class="product-card__image-container">
+                                                                <img class="product-card__image"
                                                                     src="./images/products/<%= products[j].image %>"
                                                                     alt="<%= products[j].name %>">
                                                                 <i
-                                                                    class="fa-regular fa-heart product-card__favorite-icon position-absolute top-0 end-0 p-2 text-danger"></i>
+                                                                    class="fa-regular fa-heart product-card__favorite-icon"></i>
                                                             </div>
-                                                            <div class="card-body text-start">
-                                                                <p class="card-text text-muted mb-0">
+                                                            <div class="product-card__info">
+                                                                <p class="product-card__category">
                                                                     <%= products[j].category %>
                                                                 </p>
-                                                                <h5 class="card-title">
+                                                                <p class="product-card__name">
                                                                     <%= products[j].name %>
-                                                                </h5>
-                                                                <p class="card-text fw-bold text--green">
-                                                                    $ <%= products[j].price %>
                                                                 </p>
-                                                            </div>
-                                                            <div
-                                                                class="card-footer bg-white d-flex justify-content-between gap-2 border-0">
-                                                                <a href="/productos/detalle/<%= products[j].id %>"
-                                                                    class="btn btn--secondary w-100">VER MÁS</a>
-                                                                <button class="btn btn--primary " type="button"
-                                                                    onclick="addProductCart('<%= products[j].id %>')">
-                                                                    <i class="fa-solid fa-cart-shopping"></i>
-                                                                </button>
+                                                                <p class="product-card__price">$ <%= products[j].price
+                                                                        %>
+                                                                </p>
+                                                                <div class="d-flex justify-content-around gap-2">
+                                                                    <a href="/productos/detalle/<%= products[j].id %>"
+                                                                        class="btn btn--secondary w-100">VER MÁS</a>
+                                                                    <button class="btn btn--primary " type="button"
+                                                                        onclick="addProductCart('<%= products[j].id %>')">
+                                                                        <i class="fa-solid fa-cart-shopping"></i>
+                                                                    </button>
+                                                                </div>
                                                             </div>
                                                         </article>
                                                     </div>
@@ -98,6 +97,8 @@
                                         <% } %>
                                 </div>
                             </div>
+
+
                         </div>
                         <a href="/productos/lista" class="btn btn--tertiary mt-4"> VER MÁS</a>
                     </section>
@@ -345,6 +346,7 @@
                 <!-- /Icon whatsapp -->
                 <!-- Scripts -->
                 <%- include("../partials/scripts") %>
+                    <!-- /Scripts -->                    
     </body>
 
 </html>
