--- a/src/views/partials/banner.ejs
+++ b/src/views/partials/banner.ejs
@@ -9,24 +9,24 @@
           <div class="carousel-item active">
             <img src="images/banner/Banner_Respiratoria.jpg" class="d-block w-100" alt="Protección-Respiratoria">
             <div class="carousel-caption d-none d-md-block">
-              <h1 class="fw-bold display-3 text-shadow">¡TRABAJAMOS PARA PROTEGERTE!</h1>
-              <p>EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
+              <h1 class="fw-bold display-3 text-shadow text-wrap">¡TRABAJAMOS PARA PROTEGERTE!</h1>
+              <p class="text-wrap">EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
               <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a> 
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/banner/Banner_Auditiva.jpg" class="d-block w-100" alt="Protección-Auditiva">
             <div class="carousel-caption d-none d-md-block">
-                <h1 class="fw-bold display-3 text-shadow">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h1>
-                <p>EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
+                <h1 class="fw-bold display-3 text-shadow text-wrap">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h1>
+                <p class="text-wrap">EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
                 <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/banner/Banner_Ocular.jpg" class="d-block w-100" alt="Protección-Ocular">
             <div class="carousel-caption d-none d-md-block">
-                <h1 class="fw-bold display-3 text-shadow" >CALIDAD CERTIFICADA EN CADA PRODUCTO</h1>
-                <p>EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
+                <h1 class="fw-bold display-3 text-shadow text-wrap" >CALIDAD CERTIFICADA EN CADA PRODUCTO</h1>
+                <p class="text-wrap">EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
                 <a class="carosel-button__buy btn btn--primary" href="/productos/lista">COMPRAR AHORA +</a>
             </div>
           </div>
