--- a/src/views/product/list.ejs
+++ b/src/views/product/list.ejs
@@ -45,6 +45,7 @@
             </main>
             <script>
                 const products = <%- products %>;
+                const converterMoneyArg = <%- converterMoneyArg %>;
             </script>
             <!-- Footer -->
             <%- include("../partials/footer") %>
