--- a/public/css/general.css
+++ b/public/css/general.css
@@ -6,7 +6,7 @@
 --black: #212529;
 --red: #ff5757; 
 --green: #4caf50;
---blue:#0066cc;
+--blue:#0d6efd;
 
 /* Colores fuertes */
 --darkgray: #333333;
@@ -88,7 +88,7 @@ a {
 }
 
 .text--green{
-    color: var(--green);
+    color: var(--green)!important;
 }
 
 .text--medium{
